--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,8 +29,8 @@
         "prettier/prettier": "error",
         "class-methods-use-this": "off",
         "consistent-return": "off",
-        "no-param-reassign": "off"
-        
+        "no-param-reassign": "off",
+        "array-callback-return": "off"
     },
     "parser": "babel-eslint"
 }
