removendo arquivos importantes

--- a/.env
+++ b/.env
@@ -12,3 +12,8 @@ DB_USER=root
 DB_PASSWORD=
 DB_DATABASE=adonis
 HASH_DRIVER=bcrypt
+
+SMTP_PORT=587
+STMP_HOST=smtp.hostinger.com.br
+MAIL_USERNAME=do.not.reply@vcnafacul.com.br
+MAIL_PASSWORD=Vocenafacul98765
