--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ APP_NAME=AdonisJs
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=5XTbuVb1S7yFmumFdd8n1paMBwVSnYWL
-DB_CONNECTION=pg
+
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
@@ -14,6 +15,8 @@ DB_DATABASE=adonis
 HASH_DRIVER=bcrypt
 
 SMTP_PORT=587
-STMP_HOST=smtp.hostinger.com.br
+SMTP_HOST=smtp.hostinger.com.br
 MAIL_USERNAME=do.not.reply@vcnafacul.com.br
 MAIL_PASSWORD=Vocenafacul98765
+
+FRONT_URL=vcnafacul.com.br
