rename table tipo_simulado

--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=5XTbuVb1S7yFmumFdd8n1paMBwVSnYWL
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pg
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
+DB_PORT=12345
+DB_USER=vcnafacul
+DB_PASSWORD=vcnafacul98765
 DB_DATABASE=adonis
 HASH_DRIVER=bcrypt
 
